--- a/calc/style.css
+++ b/calc/style.css
@@ -36,7 +36,7 @@ button{
     margin-top: 10px;
     font-size: 1rem;
     font-weight: bold;
-    background-color: #FEFFEA;
+    background-color: #f6d100;
     color: #424242;
     box-shadow:0px 2px 5px rgb(199, 199, 199);
     
