--- a/calc/style.css
+++ b/calc/style.css
@@ -36,7 +36,7 @@ button{
     margin-top: 10px;
     font-size: 1rem;
     font-weight: bold;
-    background-color: #f6d100;
+    background-color: #FEFFEA;
     color: #424242;
     box-shadow:0px 2px 5px rgb(199, 199, 199);
     
@@ -46,7 +46,7 @@ button{
     justify-content: space-between;
 }
 .operator{
-    background-color: #FCFC62;
+    background-color: #f6d100 ;
     color: #424242;
     
 }
