--- a/profile/style.css
+++ b/profile/style.css
@@ -36,8 +36,7 @@ p{
     color: #111;
 }
 .banner .content .i{
-    color: rgb(202, 0, 0);
-    text-shadow: 3px 2px  #111;
+    color: #111;
     font-size:0.8em;
 }
 .banner .content p{
