--- a/profile/style.css
+++ b/profile/style.css
@@ -21,8 +21,8 @@ p{
     width: 100%;
     min-height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content:center;
+    align-items:center;
     background:   url(img/banner.jpg);
     background-size: cover;
 
@@ -158,7 +158,7 @@ section{
     height: 100%;
 }
 section.menu{
-    padding: 100px 0 0 100px;
+    padding: 10px 0 100px 100px;
 }
 .skill{
     background: linear-gradient( rgba(0,0,0,0), rgba(0,0,0,1)),url(img/wood.jpg);
@@ -318,7 +318,7 @@ section.menu{
         padding: 20px;
     }
     section.menu{
-        padding: 0;
+        padding: 0 0px 0 30px;
     }
     .banner .content h2{
         font-size: 3em;
