--- a/profile/style.css
+++ b/profile/style.css
@@ -214,7 +214,7 @@ section.menu{
     background-size: cover;
 }
 .contactform{
-    padding: 75px 50px;
+    padding: 30px 50px;
     background: #fff;
     box-shadow: 0 15px 50px rgba(0,0,0,1);
     max-width: 350px;
@@ -256,6 +256,10 @@ section.menu{
     max-width: 100px;
     border: none;
     cursor: pointer;
+}
+.insta a{
+    color: rgb(255, 81, 0);
+    font-size: 1.5em;
 }
 .copyrighttext{
     padding: 8px 40px;
@@ -335,6 +339,7 @@ section.menu{
         height: 300px;
         margin-top: 20px;
     }
+    
     .menu .content{
         margin-top: 20px;
     }
