--- a/profile/style.css
+++ b/profile/style.css
@@ -23,7 +23,7 @@ p{
     display: flex;
     justify-content:center;
     align-items:center;
-    background:   url(img/banner.jpg);
+    background:url(img/banner.jpg);
     background-size: cover;
 
 }
@@ -33,7 +33,7 @@ p{
 }
 .banner .content h2{
     font-size: 5em;
-    color: #111;
+    color: #fff;
 }
 .banner .content .i{
     color: #111;
@@ -66,6 +66,12 @@ header .logo{
     font-size: 2em;
     text-decoration: none;
 }
+header.sticky .logo:hover{
+    color: #fdca40;
+}
+header .logo:hover{
+    color: #fc5404;
+}
 header.sticky .logo{
     color: #111;
 }
@@ -80,11 +86,15 @@ header .navigation li{
 header .navigation li a{
     text-decoration: none;
     color: #fff;
-    font-weight: 300;
+    font-weight: 500;
     
 }
 header.sticky .navigation li a{
     color: #111;
+    font-weight: 500;
+}
+header.sticky .navigation li a:hover{
+    color: #fdca40;
 }
 header .navigation li a:hover{
     color: #fc5404;
@@ -161,7 +171,7 @@ section.menu{
     padding: 10px 0 100px 100px;
 }
 .skill{
-    background: linear-gradient( rgba(0,0,0,0), rgba(0,0,0,1)),url(img/wood.jpg);
+    background: linear-gradient( rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url(img/wood.jpg);
     background-size:cover ;
 }
 .white .titletext{
@@ -253,13 +263,20 @@ section.menu{
     letter-spacing: 2px;
     font-weight: 500;
     transition: 0.5s;
-    max-width: 100px;
+    width: 100px;
     border: none;
     cursor: pointer;
 }
+.contactform .inputbox input[type="submit"]:hover{
+    width:100%;
+}
 .insta a{
     color: rgb(255, 81, 0);
-    font-size: 1.5em;
+    font-size: 1.2em;
+}
+.link a{
+    color: rgba(16, 0, 165, 0.87);
+    font-size: 1.2em;
 }
 .copyrighttext{
     padding: 8px 40px;
